Adds reading notes for the column - PM.

--- a/note/...column_产品思维30讲.md
+++ b/note/...column_产品思维30讲.md
@@ -169,6 +169,7 @@ __第二套用户画像：大明、笨笨和小闲__
 很多时候，你以为你是在消费产品，其实你是在消费场景。
 场景的核心是在空间加时间的点上触发别人的情绪。
 其实人所有的理智和意识都是把人往回拉的，而所有的情绪是在推动人的行动。
+在万物互联的未来，到处都是屏幕，到处都是网络连接的入口。入口不是场景，能触发情绪才是。
 
 
 ## 13 - 系统能力：怎样用系统能力给人提供确定性
@@ -189,3 +190,70 @@ __第二套用户画像：大明、笨笨和小闲__
 当你决定要做一个产品，准备搭建自己的系统能力时，你先问自己一句“我应该从哪个点来建立我系统性的效率优势？” 因为没有效率优势，这个系统是一个没有竞争力的系统。
 
 企业的存在就是社会效率分工的产物，天下武功唯快不破。
+
+
+## 15 - 系统能力：系统世界观 - 微信、米聊、陌陌
+迭代是什么意思？
+迭代就是小步快跑，把最内核的部分先放出来，不断优化、小范围试错。
+判断一个产品经理是否厉害，很重要的一条就是判断他设计的产品第一个版本有多简单、直接、切中要点，能不能直指人心。
+迭代中，重要的是次序，前一个动作是后一个动作的预动作。
+
+人为什么要在交流的时候使用表情？其实是因为用户很多时候找不到合适的词汇。
+用一种更轻的思考方式传递自己的想法、感觉、情感。
+
+
+## 16 - 系统能力：系统迭代：微信红包的意外与刻意
+4.0版本时，你在朋友圈发照片，如果朋友评论，你是没有办法回复评论的。回复评论的功能，直到4.2版本才做出来。
+这说明什么呢？没有必要憋大招，没有必要把所有功能全都做好再放出来。
+不能回复朋友在朋友圈下的评论又怎么样呢？如果我非常想回复他，大可以点对点跟他说。
+所以产品的核心功能点有效比什么都重要，基于核心功能附加的其他功能点没有那么重要，可以一步步来。
+
+怎么让大家升级成5.0版本？这个时候微信做了一个非常漂亮的运营，而这个运营是通过产品来完成的。它推出了一个小产品，我想你还有印象，就是“打飞机”。
+那个时候如果你刚升级了5.0的版本，一打开微信就直接出现一个“打飞机”游戏的界面，然后大家就都开始玩。身边的人听说了也会去升级版本，加入打飞机大战的战团，彼此PK。 
+微信就在不知不觉间，完成了5亿用户的升级。
+这就是产品的高低段位的差别，哪怕在你让用户选择版本这一个动作上，怎么能让用户舒舒服服地去更新，差别都是很大的。
+
+当时微信支付的总经理吴毅在回忆微信红包发布的场景时说，他当时在自己的办公室里坐着，觉得外面的办公区特别吵，一帮人在那儿又喊又叫地折腾。他就推门出去说：“你们在干什么？怎么这么吵啊？上班呢！”
+这些小孩就说，“我们以前说要做一个发红包的小应用，现在做出来了，特别好玩，要不你试一试？”
+一个是点对点红包，一个是拼手气红包，当时还是作为一个插件安装在微信里的，大家开始测试，这时候就有人顺手把一个红包丢到了腾讯的一个大群里。
+于是从根本上改变了支付宝和财付通战局的产品就这样发布了。在此之前，其实腾讯内部都不知道有这样一个产品。
+
+我们都生活在某个圈层里，而且圈层之间是彼此不了解，也很难破壁的。
+我原来腾讯的同事，一个1985年的男生，他做了一个短期小额贷款产品，大概每天有300多万人向他贷款。他基本上是通过大数据的方式去审核筛查，给100万多人放钱。
+这些人要贷多少钱呢？基本上是贷200块到1000块钱之间，贷款的时间大概是两个星期到两个月。场景就是很多人离发工资还差两个星期，但是实在没有钱撑不下去了，需要借200块钱撑两个星期。
+所以我当时的第一反应就是，我不能理解为什么200块钱还要贷款？
+他说：“这就是圈层，是有这样的圈层存在的。你去关注一下这群找我贷款的人的关系链，你会发现，几乎是同一时间，这个人的整条关系链都在借钱。”
+
+2014年春节，微信红包就达到了它的第一个用户峰值，多少人呢？458万人。
+这之后的几个月时间里，微信红包的用户数就再也没有突破过这个数字。除夕肯定是红包的高发期，那一天使用微信红包的达到了458万人，之后的几个月，又从这个高峰值上掉下来了，而且再也没有达到过这个数字。
+这叫什么？这就叫遇到了圈层壁垒。所以每次有人问我说互联网圈的核心活跃人数有多少？我就跟他说，有458万。因为这是微信红包按照它的自然能量达到的极限值。
+像红包这么天然的东西，微信红包操作又是这么简单，但是在没有借助任何外部势能的情况下，将近7个月的时间，它就困在400万用户里无法突破。
+实际上，互联网的尝鲜爱好者就这么多，它的自然传播极限大概也就是这样了。
+这个圈层壁是怎么被打破的呢？春晚。2015年微信和春晚合作。我们不得不承认，春节就是我们中国最高的文化势能之一。
+当天微信红包新增一亿用户。从400万用户到一亿用户，靠春节这样一个核心场景的触发完成。支付宝积累一亿用户用了多久呢？大概是8年，而微信支付是一天。
+
+罗马不是一天建成的。
+不管我们今天看到的是微信这个我们每天都要依赖的产品，还是腾讯这家公司，抑或是深圳这座城市，都是迭代的产物。
+我们自己的人生也是迭代的产物。
+从一个最好的内核开始，一个一个动作地持续迭代和一次一次微小的选择，就会成就你的产品以及你的人生。
+微信不过就是7年，深圳市也不过就是37年。
+今天你在一个什么样的点位上没有那么重要，重要的是在未来的几年里，你会用什么样的方式持续迭代。
+
+
+## 17 - 系统能力：系统生死线：猎豹和它的关键任务
+这个话题是我和阿里巴巴管HR的副总裁王民明聊领导力的时候谈到的。我问王民明：“阿里巴巴怎么定义领导力？”
+他说：“把握客观元素，把事情做成的能力。”接着他又说了一个很有趣的话题，阿里巴巴对领导力的定义就是带领大家穿越生死的能力。
+
+领导力的核心，是甄别关键任务。
+面对生死考验的时候，你能依靠的不是管理能力，而是领导力。
+领导力的核心，是甄别“关键任务”，然后动员大家穿越生死。
+
+所有的产品都是某个系统能力的结果，你要的不是做一个产品，而是建设一套系统能力，然后为你的用户提供确定性。
+系统能力的效率优势、系统的迭代能力，都不是最后你呈现的产品表面能看得出来的，但是你的系统能力是你的产品能否存在的本质。
+
+腾讯用风控能力区分职级
+腾讯的职级系统中，对不同级别员工的风控能力的描述很智慧。
+普通员工，明确知晓常见风险。 比如，别靠近水，游泳有风险。
+项目经理，具备风险规避意识。 比如，安排活动路线的时候，有危险的地方就放弃、绕过。
+总监，有风控能力。 我有风险规避意识，明确知道长线风险。避不过的时候， 我知道应该怎么组织大家，以及做好突发事件的预案。
+总经理，能操作有风险的执行。 常规水域安全但竞争激烈，僧多粥少。有个地方鱼很多，但是要穿过一片风高浪大的地方，我有本事跨越大海，带你们去资源丰盛的地方打大鱼。
