Adds reading notes for the column - PM.

--- a/note/...column_产品思维30讲.md
+++ b/note/...column_产品思维30讲.md
@@ -202,7 +202,7 @@ __第二套用户画像：大明、笨笨和小闲__
 用一种更轻的思考方式传递自己的想法、感觉、情感。
 
 
-## 16 - 系统能力：系统迭代：微信红包的意外与刻意
+## 16 - 系统能力：系统迭代 - 微信红包的意外与刻意
 4.0版本时，你在朋友圈发照片，如果朋友评论，你是没有办法回复评论的。回复评论的功能，直到4.2版本才做出来。
 这说明什么呢？没有必要憋大招，没有必要把所有功能全都做好再放出来。
 不能回复朋友在朋友圈下的评论又怎么样呢？如果我非常想回复他，大可以点对点跟他说。
@@ -257,3 +257,16 @@ __第二套用户画像：大明、笨笨和小闲__
 项目经理，具备风险规避意识。 比如，安排活动路线的时候，有危险的地方就放弃、绕过。
 总监，有风控能力。 我有风险规避意识，明确知道长线风险。避不过的时候， 我知道应该怎么组织大家，以及做好突发事件的预案。
 总经理，能操作有风险的执行。 常规水域安全但竞争激烈，僧多粥少。有个地方鱼很多，但是要穿过一片风高浪大的地方，我有本事跨越大海，带你们去资源丰盛的地方打大鱼。
+
+
+## 18 - 用户体验：用户体验的五个层次
+__战略存在层__  
+最核心的战略存在层， 就是着手做任何一个产品前，必须明确地定义这两个问题，你需要把它们贴在墙上，保证项目组的每个人都清楚，都认同：
+1. 我们要通过这个产品得到什么？
+2. 我们的用户要通过这个产品得到什么，他们为什么会依赖我们？
+你对自己的存在战略设计是什么？你能存在，不是因为你厉害，而是别人需要你，别人能持续依赖你。
+
+__能力圈层__  
+战略层的外延是第二层——能力圈层。能力圈要确定：
+我们要做到哪些事，具体要提供什么样的确定性。
+我们不做哪些事，对这些事坚决不碰。
