Adds reading notes for the column - PM.

--- a/note/...column_产品思维30讲.md
+++ b/note/...column_产品思维30讲.md
@@ -268,5 +268,16 @@ __战略存在层__
 
 __能力圈层__  
 战略层的外延是第二层——能力圈层。能力圈要确定：
-我们要做到哪些事，具体要提供什么样的确定性。
-我们不做哪些事，对这些事坚决不碰。
+- 我们要做到哪些事，具体要提供什么样的确定性。
+- 我们不做哪些事，对这些事坚决不碰。
+
+__资源结构层__  
+毛泽东一句话定义了“资源”，就是“谁是我们的敌人，谁是我们的朋友”。
+
+__角色框架层__  
+用于网站是框架，用于人世间是角色。
+你打开任何一个网页，你在感知层感知到的一切内容、功能，都是在这个框架内被框定的。
+你和一个空姐在飞机上说话，或者和一个银行职员在银行里说话，她的反馈方式很大程度是她的角色框定的。
+
+__感知层__  
+我们都很明白感知层，颜色、声音、嗅觉……感知层当然很重要，就好像俊男美女，修饰得体的人永远容易赢得第一好感一样。
