Adds handy notes.

--- a/note/...2018_handy_notes.md
+++ b/note/...2018_handy_notes.md
@@ -5,6 +5,9 @@ date      : 2018-01-01
 
 
 ## 散记
+What separates a master from a cubicle worker (both of whom perform actions over long periods of time) is that the cubicle workers does the action and seeks completion while the master does action with the intention of discovery.
+    -- Nicolas Cole
+
 故善战者，求之于势，不责于人，故能择人而任势。任势者，其战人也，如转木石；木石之性：安则静，危则动，方则止，圆则行。故善战人之势，如转圆石于千仞之山者，势也。
     -- 《孙子兵法·势篇》
 
