Adds reading notes for columns.

--- a/note/...column_吴军的谷歌方法论.md
+++ b/note/...column_吴军的谷歌方法论.md
@@ -4,6 +4,45 @@
 --------------------------------------------------------------------------------
 
 
+## 2018-02-02 高等教育的目的是什么？
+大学教育的目的只是培养有识之士，而不是教授谋生手段。
+学生们要学的不仅仅是知识，更重要的是如何应用知识来改变社会。
+大学教育的另一个目的是获得良知，并且在关键时刻表达出自己的观点，是大学教育的精髓所在。
+在很长的时间里，办大学的目的就是为了培养精英，这是欧洲著名大学都有的共识，当然，这些精英不同于现在一般人所理解的成功人士或政要们，而是带动这个社会前进的各种人。
+
+
+## 2018-02-01 在大学，你需要补充自己哪五种训练？
+1. 看透钱
+对钱的认知，美国精英阶层的一个共识是它是物质的媒介，而不是物质本身。
+上哈佛的目的，是成为精英，不是学习赚钱的技能。作为精英，有钱了是要反哺社会的。 中国过去的士绅都知道要给乡里修桥铺路，这是一种社会责任。哈佛也是一样， 它的眼界不在于看不看钱，挣不挣钱，而在于能不能看透钱。
+
+2. 先学会服从、合作；学会当助手、当领导
+领导力并非天生的，需要后天训练。和权力不同的是，领导力无法移交，也并非一个官员或者富豪直接把自己的权力交给孩子，孩子就能自然有了。
+领导力是否是成为精英的必要条件？不是，但是它能帮助我们调动更多的资源，最终做出更大的贡献。
+无论是服从，还是合作，都有一个共同的特点，就是要为了全体利益牺牲一点个人利益。
+
+3. 认清边界，学会在边界里做事情
+第一是防御性思维， 也就是说，自己虽然在边界里做事情了，但别人可能会越界，因此要有所防范。
+没有经验的人，会天真地以为只要规定确定了，所有的人都会遵守，如果是这样，世界上就不会有太多车祸发生了。
+第二是围棋思维， 未谋胜，先虑败，只有立于不败之地，才容易取胜，而且在遇到挫折时，才能翻盘。
+第三是计算机思维中的缓存（Buffering）， 具体地讲就是凡事留有余地，凡事不能太较真。
+
+4. 把自己培养成健全的人
+5. 树立信仰
+为什么必须有信仰呢？因为大家很少看到一个没有信仰的精英。 没有信仰，做事情就没有目标，遇到困难就容易打退堂鼓。 有了信仰，不仅做事情能理直气壮，百折不挠，就是和别人讲道理也能底气十足。
+当然，我觉得大家的信仰还是需要高尚一点， 因为信仰体现着人生价值，并且落实着人生的意义。
+
+
+## 2018-01-31 为什么要上大学，还要上好大学？
+原因很简单，上大学不仅让人成为未来社会精英的可能性增加很多，退一步讲，即使不能成为精英，获得幸福生活的可能性也大很多。
+上大学很重要的目的是提高自己的格局。 格局不大，人就走不远。
+
+上大学的第二个目的是通过学习一种技能达到两个目的。 
+其一，有一个在未来社会上能够自己养活自己，立于不败之地的基本能力，这对于底层人士晋升到中产阶级非常重要。
+其二，通过掌握一种技能，证明自己有学习能力，能够获得成功， 这样只要一个人走出校门后有上进心，就能学习新知，适应新环境。
+其三，其实是要完成从草根到中产阶级，从平民到精英，从一个社会的消费者到一个贡献者的准备工作或者所必要的训练。
+
+
 ## 2017-12-18 超越免费（上）
 超越免费的第一条是制造一种稀缺性，而这需要产品、服务本身具有一种难以复制的特性。
 
