--- a/note/...column_精英日课_第二季.md
+++ b/note/...column_精英日课_第二季.md
@@ -4,7 +4,16 @@
 --------------------------------------------------------------------------------
 
 
-## 2018-01-18 《穿越平行宇宙》2:为什么世界是数学的
+## 2018-02-06 《见机》5: 最好的结局
+现在编剧们心目中的好剧情是这样的：
+一开始你想要一个东西，你一番努力奋斗，而到结局的时候，你发现你之前*想要*的东西已经不重要了。你得到的是你真正*需要*的东西。你获得一个意外的洞见，你会学到一个道理。
+
+
+## 2018-01-31 《见机》3: 开始的时机
+当你决定要做一件事情的时候，你要考虑的不仅仅是你有多么想做这件事、这件事是你多年以来的什么情怀 —— 你应该仔细考虑，现在是不是开始这件事的时机。
+
+
+## 2018-01-18 《穿越平行宇宙》2: 为什么世界是数学的
 数学王国，无需“为什么”，就存在。宇宙，只不过是数学王国中某些数学结构的物理实体而已。
 
   1. 有一个永远不变的数学王国。
