Adds reading notes for columns.

--- a/note/...column_5分钟商学院_实战.md
+++ b/note/...column_5分钟商学院_实战.md
@@ -5,6 +5,13 @@
 --------------------------------------------------------------------------------
 
 
+
+## 2018-02-07 设计3层次：好看有什么用？好看，能当饭吃
+19世纪英国最伟大的作家与艺术家之一奥斯卡·王尔德说过，“只有肤浅的人，才不会以貌取人。”翻译成今天的话，就是：颜值就是正义，美就是生产力。
+诺曼说，心理学研究发现，人类的大脑活动可以分为三个层次：本能层、行为层和意识层。本能层就是天生的、最原始的需求，比如“好看”；行为层是后天学来的经验和动作，比如“好用”；意识层最高级，需要理性的参与，比如看推理小说，需要大量思考才能获得更多乐趣，叫做“好有意思”。
+“好看，好用，好有意思”，诺曼说，设计师的工作，就是要让自己的产品满足这三个层次。
+
+
 ## 2018-01-11 公关产品：一双你都未必没见过的筷子，是如何创造品牌价值的？
 并非每一款产品生产出来的目的，都是最大的销量、最大的收入，或者最大的利润。有一些产品来到这个世界上，仅仅是为了“秀”，秀你的科技实力、创意能力、品味水准，或者工艺水平。这些产品就叫做：公关产品。
 
