--- a/note/...column_产品思维30讲.md
+++ b/note/...column_产品思维30讲.md
@@ -281,3 +281,117 @@ __角色框架层__
 
 __感知层__  
 我们都很明白感知层，颜色、声音、嗅觉……感知层当然很重要，就好像俊男美女，修饰得体的人永远容易赢得第一好感一样。
+
+
+## 19 - 用户体验：怎样绘制用户体验的地图
+用户研究，重要的不是零散地收集数据，拿数据证明自己的对错，而是建立一个有代表性的故事。
+
+总结一下，我们谈了一个概念叫用户体验地图和两个核心观点。
+第一个观点：故事比数据更重要。
+第二个观点：一个好产品，从一个好故事开始。
+
+
+## 20 - 用户体验：服务蓝图的核心要素：峰值、终值
+CEO最核心的工作就是定义战略和建设能力圈。
+用户体验地图的价值让你真切地站在用户视角，来看自己的产品是不是满足了用户的目标。 服务设计蓝图是为了解决资源结构和角色框架的问题。
+
+用户体验地图是以用户情绪为中心的，而服务蓝图则是以服务流程为中心的。
+没有任何一家公司的服务，能够完成用户所有的期待。如果每一个点都达到甚至超过用户期待，甚至超过了你的资源配置，那你的资源配置一定是超级冗余，相应的成本一定会过高。
+
+服务蓝图到底要干什么
+服务蓝图要做一眼、一条路、三个点。
+一眼是什么？ 就是产品要第一时间让用户“一眼”看到自己的目标。
+一条路是什么？ 就是产品要有一个清晰的路径，让用户能够知道如何使用你的服务，用来达到或者接近自己的目标。用户无法走下去，就是服务流程的崩溃点。
+三个点是什么？峰值，终值和忍耐底线。
+
+峰值和终值，是由2002诺贝尔奖得主、心理学家丹尼尔·卡尼曼提出的。他发现大家对体验的记忆由两个核心因素决定：
+第一个是体验最高峰的时候，无论是正向的最高峰还是负向的最高峰，一定是能记得住的。
+第二个是结束时的感觉。
+这就是峰终定律（Peak-End Rule） 。
+体验一个事物或产品之后，所能记住的就只有在峰值与终值时的体验，而整个过程中每个点好与不好，时间长短，对记忆或者感受都没那么大影响。
+
+为什么要讲体验的峰值和终值？
+因为平庸的用户体验无法成就你。
+设计服务蓝图核心就是让你在资源有限的情况下，配置你的资源，在关节点上安排角色，保证整体服务路径不崩溃，尽量不压到用户的忍耐底线。然后尽量集中资源，打造体验的峰值，最后再做一个体验终值的美好小尾巴。
+
+
+## 21 - 用户体验：上瘾机制：用户激励系统
+游戏是最顶级的社区， 游戏之外的所有社区类产品，或需要用户活跃度的产品，都需要把用户激励机制作为非常重要的产品机制。如果你设计一个产品，而没有激励机制，那么产品是不完整的。
+确定，就是依赖；不确定，就是伤害。一个确定性的丧失，不论大小，都是非常难受的。
+所以，所有的改版、新包装、重新装修，都是需要非常慎重的。
+
+激励系统的两个要素是“受激励点”和“被激励能力”。
+公司奖励员工也是如此，不能憋大招到年底再给某个员工发个大奖。受激励点少，最后一招再大，也很难发挥作用。
+激励系统的第二个设计——定义获得能力并努力降低门槛。
+比如，你要激励你家小孩去骑自行车，但是如果他不会骑自行车，或者他没有自行车的话，再多的激励也无法被转化为行动。激励与对方的能力不匹配的事情，就是无效激励。
+
+
+## 22 - 用户体验：名字是你的文化资产
+名字是什么？名字是召唤。
+《说文解字》中，对名的解释是：“名，自命也。从口夕，夕者，冥也，冥不相见，故以口自名。”
+意思是说，在早期的社会交往中，原始社会一个部落人不多，人人都互相认识，白天可以通过形体、面貌相互识别，而到了晚上相互看不见，就只能通过呼唤名字才能召唤一个人了。
+
+名字是什么？
+安倍晴明说：“名字是最短的咒。”咒就是束缚。
+《道德经》说：“无名万物之始，有名万物之母。”
+
+一个强大的名字是带有强烈情感的，对我们有咒语般的作用。比如，你听到一个你喜欢的人的名字，就好像中了一个微笑咒。听到一个你非常讨厌的人的名字，就好像中了一个白眼咒。
+所以，当你要起一个名字的时候，你要知道你是在寻找一句咒语。通过这个咒语，你和你的同伴一起召唤你的产品，把它从无到有召唤到这个世界上。
+
+我在给一个初中生讲物理、化学，他很不喜欢，觉得枯燥。我说主要是名字不好，如果物理改叫“大自然的秘密”，化学改叫“炼金术”，你是不是就很有兴趣了？
+小朋友说是啊，那为什么要叫物理、化学这么让人亲近不起来的名字呢？我说大概就是为了隔绝吧，让圈外一看就觉得难，就放弃了，这也是一种命名的意图。比如中国古代算命的书里术语很多，就是为了让你看不懂。
+他又问我，那语文可以叫什么？我说语文厉害啦，语文可以叫“咒语书”。
+我只要改改名字，就顿时让孩子对一门课的兴趣和愿望产生了变化，这就是语文的力量。
+
+名字里的文化势能
+判断一个名字是不是有力，在于能在对方心中召唤出一种什么样的情感。
+雷军说：“什么是口碑？口碑就是把事情做过头。”
+华与华创始人华杉说：“口碑叫口碑，不叫眼碑。”因为人们听说的东西，会远远大于见过的东西。所以，口号、口碑、听觉，成为了传达率的关键。
+
+
+## 23 - 创新模式：用“用户价值公式”衡量创新
+俞军是中国的顶级产品经理之一，做了百度贴吧、百度知道等几个中国用户量最大的产品。
+他对产品经理的定义是这样的：产品经理是以创造用户价值为工具，打破旧的利益平衡，建立对己方有利的新利益链，建立新平衡的过程。
+
+俞军的用户价值公式：用户价值 = (新体验 - 旧体验) - 替换成本。
+用户的替换成本包括什么？品牌认知、获取成本、学习成本、使用成本，包括使用过程中遇到问题得到及时帮助的便利程度等。
+
+一个产品，你明明可以做得更好，别人先做了，你可以比原来的产品优化20%～40％的体验，怎么办？看体量，如果对方体量远大于你，就放弃。
+我们得出的血泪教训——同维度竞争，体量第一。就像是两个人拼拳脚，大个子打小个子。
+如果几个竞争者体量差不多呢？那就是红海战争，会有一场漫长的拉锯战。只有两种方式能终结这种同维度乱战：要么有能降维攻击的企业出现，要么是资本意志强行合并。曾经的杀毒市场，千团大战、打车大战、外卖大战，莫不如此。
+
+俞军说：“当你找到蓝海，找到一块用户体验为零的领域，你需要做的是什么？你需要把用户体验做到100分再发布，还是做到60分就快速铺开市场？当然是产品做到60分就赶紧上。”
+速度第一，快速感染用户铺开市场，让最多的用户体验到你。这就是给后来者的壁垒，这就是蓝海的意义。
+就好像当年在欧洲大陆混不下去的西班牙人，到了南美所向无敌一样。那些在欧洲的宫廷里混得很好的人，当然不会冒着风险穿越大海。现有存量市场的既得利益者，也犯不着考虑创新。
+创新，找蓝海，找到没有大佬、用户体验为零的增量市场，是新公司唯一的改变命运的机会。
+
+
+## 24 - 创新模式：用“交叉视角”跨界创新
+为某件事感到痛苦，也许就是你心念已动的时候。而要寻找解决它的创新之处，不妨到其他领域转转。
+
+
+## 25 - 创新模式：怎样从新要素到新物种
+新产品一定要有新要素，否则没有竞争力。
+新要素有两种：
+第一种，在现有体验的基础上，运用最新科技等新要素，提升用户体验，或者改变成本结构。
+第二种，用整个社会经济升级、产业升级所产生的其他领域新要素，变革内在的商业逻辑。也许用户的前端体验，依然是那个产品、那个服务，但公司背后的商业运作，已经成为了完全不同的新物种。
+
+
+## 26 - 创新模式：三级火箭：深度讲解互联网降维打击
+三级火箭是什么意思？
+第一级，头部流量。
+第二级，沉淀某类用户的商业场景。
+第三级，完成商业闭环。
+
+要玩三级火箭，有几个必要条件。
+第一，第一级火箭一定要高频应用。三级递推一定是高频推低频，没有低频推高频的。
+第二，通过第一级火箭获得大量用户之后，要快速展开一个能够沉淀用户的商业场景。
+第三，操盘三级火箭的人，一定是个势能积累到一定程度的人。
+为什么？ 首先，他要有强大的融资能力。 一级火箭是不赚钱的，你需要用免费来支撑一个庞大的用户服务系统，还要保障用户满意，这是一笔很大的钱。没有势能的人，很难募到这个规模的钱。
+其次，当一级火箭铺开头部流量，他需要快速张开，短时间聚拢资源的能力是要有一定的势能积累才能做到的。 得到App快速扩展了这么多的好老师，这并不是随便可以做到的事。
+第四，操盘三级火箭的人，一定是个狠人。
+因为你的一级火箭就是抢流量的，就是把别人河里的水都抢到自己的水渠里，成就自己的河流生态。
+你想想，这得多少人恨你。所以，干三级火箭，不是偶然干成的，而是一开始就想着颠覆现有的行业，干掉现有的企业。
+
+以1吨重的卫星为例，需要149吨燃料，三级需要77吨，四级65吨。
+火箭级数越多，需要的燃料越少。但每增加一级，不可控程度越高。就好像咱们做商业，模型过于复杂，变现链条过长，就容易玩脱了。
