--- a/note/...column_吴军的谷歌方法论.md
+++ b/note/...column_吴军的谷歌方法论.md
@@ -4,6 +4,19 @@
 --------------------------------------------------------------------------------
 
 
+## 2018-02-13 休假旅游的意义
+在认知学上，可以把知识的获取归纳为三种：亲身感知、他人告知和逻辑推知。
+逻辑推知是人类新知的来源，遗憾的是每一个人一辈子能通过这种形式得到的新知其实很少，因此前两种形式就特别重要。读书是获得知识和信息的第二种形式，而旅行属于第一种。
+从获取知识来讲，二者有一定的可替代性，但是并不能100%地替代。今天虽然他人告知的知识越来越多，但是很多时候没有亲身感知，是无法领悟的。举一个简单的例子，对99%以上的人来讲，不在股市上输点钱，那么无论看多少书，了解多少历史，都难以认清股市的凶险。
+
+
+## 2018-02-07 为什么要学习历史？
+首先，学习历史是为了清楚我们自己所处的位置，并且看清楚未来的方向，以便在一个大规模的时间和空间内看待问题。也就是说，学习历史首先是学习看问题的方法论。
+学习历史是掌握一种客观公允，而且能够超出时代的看问题的方法。
+其次，学习历史是为了学会做研究。
+最后，学习历史可以了解今天世界文化的多样性，培养自己的包容性。
+
+
 ## 2018-02-02 高等教育的目的是什么？
 大学教育的目的只是培养有识之士，而不是教授谋生手段。
 学生们要学的不仅仅是知识，更重要的是如何应用知识来改变社会。
