--- a/note/...column_精英日课_第二季.md
+++ b/note/...column_精英日课_第二季.md
@@ -4,6 +4,45 @@
 --------------------------------------------------------------------------------
 
 
+## 2018-02-12 线性思维和系统思维
+所谓系统，就是一个由很多部分组成的整体，各个部分互相之间有联系，作为整体又有一个共同的目的。人的身体、学校、公司、国家，都是系统。系统有三个特征。
+
+第一，系统里有各种元素，也就是各个部分。
+组成元素是一个系统最明显的东西，而也可能是最不重要的东西，因为它们常常是可替换的。
+第二，系统中各个元素之间，有各种关系。
+这些关系可以是上下级的命令、谁和谁合作、谁向谁汇报，也可以是规则、物理定律。元素可以随时调换，但关系通常是不变的。所以真正要理解一个系统的运行机制，你就要了解它的关系结构。
+第三，系统还有一个功能，或者说是一个目的。
+目的不明确，系统就可能出问题。再进一步，组成系统的各个部分的目标，有时候和系统的总目标是不一致的。而很多问题恰恰是出在这个不一致上。
+
+系统论的专家认为，如果出现以下症状，那这个问题恐怕不是线性问题，而是系统问题：
+  * 看似是个小问题，但是要解决它却要耗费许多资源；
+  * 多次试图解决一个问题，却总是无效；
+  * 问题本来应该容易解决，可是人们故意不解决；
+  * 公司上下似乎有个情感障碍，对这个问题避而不谈；
+  * 新人来了就发现问题，老人一笑了之；
+  * 类似的问题一再发生，整改了也没用……
+
+思考系统的时候，有几个概念需要特别重视。
+一个概念叫“ 库存（stock） ”，也就是系统里面某种东西的保有量。比如你考虑一个挣钱的系统，库存就是你挣了多少钱。如果是科研系统，库存就是你手里有多少个正在干的项目。库存有“输入（inflow）”和“输出（outflow）”，输入增加库存，输出减少库存。
+还有一个概念叫“ 反馈回路（feedback loops） ”。反馈回路分为两种，它们是库存和输入输出之间的关系机制。
+一种是正反馈回路，也叫自增强回路。所谓正反馈回路就是库存里的东西越多，输入就会越大，于是就会进一步增大库存。比如挣钱，就得靠正反馈回路。你的钱越多，投资产生的利润就越多；利润越多，你的钱又会进一步增多。投资 — 挣钱 — 投资，这就是一个正反馈回路。
+还有一种是负反馈回路，也叫平衡回路。负反馈不等于负能量 —— “负”的意思是“减少”。当库存太多了，负反馈回路负责减少库存。比如国家看谁太富了就多收他点税，看谁太穷了就给他发点钱，家里看老婆情绪不对就赶紧哄哄，这都是负反馈回路。负反馈总是让系统回到“正轨”上来。
+
+对你想要解决的这个问题而言，可能就有一个回路，正在起主导的作用！
+如果你能发现在系统里起主导作用的回路是什么，你就抓住了系统的主要矛盾，你就找到了问题的关键所在。
+
+
+## 2018-02-10 导游和指路者
+规划人生只能规划一些小事儿。事实上你连几岁结婚都规划不了。
+可是如果没有任何规划，走哪算哪，那也不行。因为成功都需要一定的积累，你必须在时机出现之前，就已经有了一定的技术储备才行。所以“尽人事，听天命”的确是个很好的态度。你想做，你做了大量准备，但是时机不成熟你不硬做，时机到了哪怕没完全准备好也要做 —— 结婚不就是这样的吗？
+
+
+## 2018-02-09 从时间管理到能量管理
+重视能量管理的人都怕麻烦。麻烦消耗能量。麻烦解决不了大事儿。麻烦让人恼火。而你的恼火，还会进一步消耗周围人的能量。鸡毛蒜皮的小事儿要留着到省电模式去做。如果老板整天拿鸡毛蒜皮消耗你的能量，你应该换个工作。
+
+时间管理属于所有人。能量管理属于需要高能量的人。
+
+
 ## 2018-02-06 《见机》5: 最好的结局
 现在编剧们心目中的好剧情是这样的：
 一开始你想要一个东西，你一番努力奋斗，而到结局的时候，你发现你之前*想要*的东西已经不重要了。你得到的是你真正*需要*的东西。你获得一个意外的洞见，你会学到一个道理。
