Adds reading notes for columns.

--- a/note/...column_5分钟商学院_实战.md
+++ b/note/...column_5分钟商学院_实战.md
@@ -6,6 +6,16 @@
 
 
 
+## 2018-02-28 定义产品：为什么褪黑素在中国，能比在美国贵56倍？
+同样一只“青瓷莲花罐”，被定义为茶叶罐时，只卖29元；但被定义为“宠物骨灰盒”，就能成为卖258元还不打折的“爱的容器”。
+
+
+## 2018-02-26 产品化：你是身怀绝技的一组能力，还是用户界面友好的产品？
+什么是产品化？技术和能力，对用户没有直接价值。只有把它们打碎、打包、打磨成产品，才能真正解决用户的问题。这个过程，就是产品化。
+怎样做到产品化？你至少可以考虑几个方向：对象感，你服务于谁；场景感，他在什么情况下用你的产品；价值感，你的产品能解决他什么问题；结构感，他用的过程体验如何？
+产品化，用在个人身上也一样。你自己，是身怀绝技的一组能力，还是用户界面友好的产品呢？
+
+
 ## 2018-02-07 设计3层次：好看有什么用？好看，能当饭吃
 19世纪英国最伟大的作家与艺术家之一奥斯卡·王尔德说过，“只有肤浅的人，才不会以貌取人。”翻译成今天的话，就是：颜值就是正义，美就是生产力。
 诺曼说，心理学研究发现，人类的大脑活动可以分为三个层次：本能层、行为层和意识层。本能层就是天生的、最原始的需求，比如“好看”；行为层是后天学来的经验和动作，比如“好用”；意识层最高级，需要理性的参与，比如看推理小说，需要大量思考才能获得更多乐趣，叫做“好有意思”。
