--- a/note/...column_世界名刊速读.md
+++ b/note/...column_世界名刊速读.md
@@ -5,6 +5,11 @@
 --------------------------------------------------------------------------------
 
 
+## 2018-02-27 《哈佛商业评论》| 麻省理工商学院的头脑风暴法
+当你还是个学生时，人们考察你的是回答问题的能力，回答得的好，分数就高。但真实生活中，提问的能力才是关键。
+When you’re a student, you’re judged by how well you answer questions. But in life, you’re judged by how good your questions are.
+
+
 ## 2017-12-15 《鹦鹉螺》| 扑克牌高手教你正确做决定
 我们总是会以结果和成败来论英雄，而不去审视在当时的情况下是不是做了正确的决定。要知道才能和运气这两个东西，其实是互相交织在一起的，很难分得开，再好的才能和决定，也可能因为运气而失败，我们只能尽量减少风险，但不可能预知结果。
 
