--- a/note/...column_产品思维30讲.md
+++ b/note/...column_产品思维30讲.md
@@ -395,3 +395,55 @@ CEO最核心的工作就是定义战略和建设能力圈。
 
 以1吨重的卫星为例，需要149吨燃料，三级需要77吨，四级65吨。
 火箭级数越多，需要的燃料越少。但每增加一级，不可控程度越高。就好像咱们做商业，模型过于复杂，变现链条过长，就容易玩脱了。
+
+
+## 27 - 创新模式：颠覆式创新：成败价值网
+什么叫价值网？《创新者的窘境》里有这样一段话：
+真正决定企业未来发展方向的是市场价值网，而非管理者；真正主导企业发展进程的是机构以外的力量，而非机构内部的管理者。管理者只是扮演一个象征性的角色。
+
+价值网里，至少有三个角色：一是客户，二是对手，三是投资人。
+客户是我们最重要的资产，但也可能是我们最主要的创新盲区。
+所以资源分配流程其实不是管理者定义的，而是来自价值网中的客户需求与对手挤压。
+
+很多极其优秀的公司为什么失败了？
+管理的书一定会告诉你是管理出问题了。
+但是写《创新者的窘境》的克里斯坦森的说法是，良好的管理恰恰是他们未能保持行业领先地位的最重要的原因。
+
+联想从PC到移动互联网叫做遇到了非连续；诺基亚曾经是手机霸主，遇到了苹果也叫遇到了非连续。
+什么是非连续？就是整个社会在发展，整体社会能力升级，新的需求被释放催生新的价值网。
+传统企业在它传统的价值网里依然可以生存，例如联想依然是PC价值网的霸主，但它在新的价值网里是边缘企业。
+
+新崛起的价值网，才是新大陆。
+什么是颠覆式创新？
+颠覆式创新最重要的标准就是，是否开启了一个新的价值网？你是不是到了“新大陆”？
+
+
+## 28 - 看产品的微观、中观与宏观视角
+中观套路：学习招数
+什么叫中观？就是套路。
+靠套路成不了高手。
+套路可以让你更有章法地展现自己，更容易搞定面试官，成为系统内按指令行事的公司中层。
+
+微观体感：成为高手
+每一个微小的动作选择叠加起来，就是你拿出来的产品，就是你活出来的样子。
+那么日常中，我们做每一个细小选择，靠的是什么？靠微观体感，就是真实地感知每一个微小瞬间。
+产品是一种被动的艺术。一个产品只能在被动中，默默把握每一个微小的主动机会，在每一个接触的瞬间，每一次的交互里，让用户顺畅地深入下来。
+用户动力不足，要放弃这个产品，你是没有任何办法的。最挑剔的人，其实就是最有防御意识的人。如果产品突然碰触用户的某个意识神经，让用户产生防御，那流失的几率就会加大。
+很多爱好者、发烧友是有微观体感的，他们需要补中观的套路，才能够有系统、有层次地释放他的感受。
+而在大公司也好，看书纸上谈兵也好，拥有了中观套路的人，一定要补微观体感。否则，说起来都对，做事却都不到位。
+
+宏观能力：打大仗
+那什么是宏观能力？就是打大仗的能力。
+
+
+## 29 - 人生逻辑大于商业逻辑
+对一个产品的使用，对一个人的关系。持续收到确定感的反馈，就会觉得安全，觉得可以依赖。如果突然变得不确定，就会有被伤害的感觉。这也是网站不要轻易改版的原因。
+
+商业是以利润为中心，人生是以意义为中心。
+商业并非人生的全部。人死前盘点自己的一生，其实没有人看这一生赚了多少利润。
+做你有内心确定感的事，人生逻辑大于商业逻辑。
+
+
+## 30 - 产品连接客观世界、过去与将来
+在上一时代，国际大品牌碾轧中国消费品、快消品、日化品的时候，因为我们资本能力、设计能力、心理优势、产业链掌控度全面低微。
+但是今天时代变了，整个中国商业的基础能力，发生变化了。
