--- a/note/...column_吴军的谷歌方法论.md
+++ b/note/...column_吴军的谷歌方法论.md
@@ -4,6 +4,22 @@
 --------------------------------------------------------------------------------
 
 
+## 2018-02-28 股神彼得·林奇成功的秘密武器
+任何为大众所知的信息，在投资上都是没有价值的。
+
+林奇会用一种叫做须鲸的方式买进卖出。须鲸是鲸鱼的一种，它们没有锋利的牙齿，以磷虾等小动物为食。在捕食的时候，它们会不加选择地、快速大量地连海水带磷虾一起吸到嘴里，然后把水吐出，用鲸须把食物留下。
+林奇的做法非常类似，他几乎每周都会作出一个小的决策，看到一个投资机会，就会先买下一些股票，然后用时间来考验它们。对于表现不好的，会毫不犹豫地卖出，对表现好的，会进行仔细研究，逐步加仓，最终只留下极少数股票长期持有，其余的则全部卖出。
+林奇的这个做法是否有理论根据呢？有的，这就是我今天要讲的第二个结论——最多的资源要用到最有效的地方，这在信息论里面被称为霍夫曼最佳编码原理。
+
+
+## 2018-02-27 “风投之王”约翰·杜尔的投资哲学（下）
+一个只知道找客观原因，不审视自己的人，不是合格的企业家。
+
+
+## 2018-02-24 为什么有大量资金涌入风投
+风险又有长期风险和短期风险之分，一般人只会注重短期风险，比如股票的短期风险就很高，但是长期风险并不高，因为经济是往上走的。而存款，短期风险近乎为零，但是长期风险很高，因为通货膨胀几乎永远会发生。
+
+
 ## 2018-02-13 休假旅游的意义
 在认知学上，可以把知识的获取归纳为三种：亲身感知、他人告知和逻辑推知。
 逻辑推知是人类新知的来源，遗憾的是每一个人一辈子能通过这种形式得到的新知其实很少，因此前两种形式就特别重要。读书是获得知识和信息的第二种形式，而旅行属于第一种。
