Adds handy notes.

--- a/note/...2018_handy_notes.md
+++ b/note/...2018_handy_notes.md
@@ -25,3 +25,7 @@ Easy choices, hard life. Hard choices, easy life.
 
 The secret of leadership is simple: Do what you believe in. Paint a picture of the future. Go there. People will follow.
     -- Seth Godin
+
+
+我这时一面盼望，一面却感到了两重的禁制：一，在通俗的意义上，接近妓者总算一种不正当的行为；二，妓是一种不健全的职业，我们对于她们，应有哀矜勿喜之心，不应赏玩的去听她们的歌。
+    -- 朱自清《桨声灯影里的秦淮河》
