Adds reading notes for the book - Unshakeable.

--- a/note/...book_unshakeable.md
+++ b/note/...book_unshakeable.md
@@ -6,13 +6,41 @@
 the purpose of business is to produce happiness, not to pile up money.
     -- B.C.Forbes
 
-
-## CH 1 - UNSHAKEABLE: Power and Peace of Mind in a World of Uncertainty
-## CH 2 - WINTER IS COMING...BUT WHEN?: These Seven Facts Will Free You from the Fear of Corrections and Crashes.
+## SECTION I - WEALTH: THE RULE BOOK
+### CH 1 - UNSHAKEABLE: Power and Peace of Mind in a World of Uncertainty
+### CH 2 - WINTER IS COMING...BUT WHEN?: These Seven Facts Will Free You from the Fear of Corrections and Crashes
 What separates the money masters from the crowd is this ability to find a winning strategy and stick with it, so the odds are always strongly in their favor.
-The most important fact of all: the biggest danger isn't a correction or a bear market, it's being out of the market.
 
-### Freedom Fact 1: On Average, Corrections Have Occurred About Once a Year Since 1900
-### Freedom Fact 2: Less Than 20% of All Corrections Turn Into a Bear Market
-### Freedom Fact 3: Nodoby Can Predict Consistently Whether the Market Will Rise or Fall
-### Freedom Fact 4: The Stock Market Rises Over Time Despite Many Short-Term Setbacks
+  1. Freedom Fact 1: On average, corrections have occurred about once a year since 1900.
+  2. Freedom Fact 2: Less than 20% of all corrections turn into a bear market.
+  3. Freedom Fact 3: Nobody can predict consistently whether the market will rise or fall.
+  4. Freedom Fact 4: The stock market rises over time despite many short-term setbacks.
+  5. Freedom Fact 5: Historically, bear markets have happened every three to five years.
+  6. Freedom Fact 6: Bear markets become bull markets and pessimism becomes optimism.
+  7. Freedom Fact 7: The greatest danger is being out of the market.
+
+
+### CH 3 - HIDDEN FEES AND HALF-TRUTHS: How Wall Street Fools You into Overpaying for Underperformance
+### CH 4 - RESCUING OUR RETIREMENT PLANS: What Your 401(k) Provider Doesn't Want You to Know
+### CH 5 - WHO CAN YOU REALLY TRUST?: Pulling Back the Curtain on the Tricks of the Trade
+
+
+## SECTION II - THE UNSHAKEABLE PLAYBOOK
+### CH 6 - THE CORE FOUR: The Key Principles That Can Help Guide Every Investment Decision You Make
+
+__1. Core 1: Don't lose__  
+  The more money you lose, the harder it is to get back to where you started.
+  We have to design an asset allocation that ensures we'll "still be okay", even when we're wrong.
+__2. Core 2: Asymmetric Risk/Reward__  
+__3. Core 3: Tax efficiency__  
+__4. Core 4: Diversification__  
+
+
+### CH 7 - SLAY THE BEAR: How to Navigate Crashes and Corrections to Accelerate Your Financial Freedom
+When it comes to the areas of your life that matter most - your family, your faith, your health, your finances - you can't rely on anybody else to tell you what to do. It's great to get coaching from experts in the field, but you can't outsource the final decision. You can't give another person control over your destiny, no matter how sincere or skilled he or she may be.
+
+As Warren Buffett says, "Risk comes from not knowing what you're doing."
+
+## SECTION III - THE PSYCHOLOGY OF WEALTH
+## CH 8 - SILENCING THE ENEMY WITHIN: The Six Money Misakes Investors Make and How You Can Avoid Them
+Neuroscientists have found that the parts of the brain that process financial losses are the same parts that respond to mortal threats.
