Adds book notes - Unshakeable.

--- a/note/...book_unshakeable.md
+++ b/note/...book_unshakeable.md
@@ -29,8 +29,9 @@ What separates the money masters from the crowd is this ability to find a winnin
 ### CH 6 - THE CORE FOUR: The Key Principles That Can Help Guide Every Investment Decision You Make
 
 __1. Core 1: Don't lose__  
-  The more money you lose, the harder it is to get back to where you started.
-  We have to design an asset allocation that ensures we'll "still be okay", even when we're wrong.
+The more money you lose, the harder it is to get back to where you started.
+We have to design an asset allocation that ensures we'll "still be okay", even when we're wrong.
+
 __2. Core 2: Asymmetric Risk/Reward__  
 __3. Core 3: Tax efficiency__  
 __4. Core 4: Diversification__  
@@ -39,8 +40,34 @@ __4. Core 4: Diversification__
 ### CH 7 - SLAY THE BEAR: How to Navigate Crashes and Corrections to Accelerate Your Financial Freedom
 When it comes to the areas of your life that matter most - your family, your faith, your health, your finances - you can't rely on anybody else to tell you what to do. It's great to get coaching from experts in the field, but you can't outsource the final decision. You can't give another person control over your destiny, no matter how sincere or skilled he or she may be.
 
-As Warren Buffett says, "Risk comes from not knowing what you're doing."
+_Warren Buffett: "Risk comes from not knowing what you're doing."_
 
 ## SECTION III - THE PSYCHOLOGY OF WEALTH
 ## CH 8 - SILENCING THE ENEMY WITHIN: The Six Money Misakes Investors Make and How You Can Avoid Them
 Neuroscientists have found that the parts of the brain that process financial losses are the same parts that respond to mortal threats.
+
+Mistake 1: Seeking confirmation of your beliefs why the best investors welcome opinions that contradic their own.
+The Solution: Ask better question and find qualified people who disagree with you.
+
+_Munger: "Forget what you know about buying fair businesses at wonderful prices; instead, buy wonderful businesses at fair prices."_
+
+Mistake 2: Mistaking recent events for ongoing trends why most investors buy the wrong thing at exactly the wrong moment.
+The Solution: Don't sell out. Rebalance.
+
+Mistake 3: Overconfidence; Get Real: Overestimating our abilities and our knowledge is a recipe for disaster
+The Solution: Get real, get honest
+
+Mistake 4: Greed, gambling, and the quest for home runs; It's tempting to swing for the fences, but vitory goes to the steady survivors.
+The Solution: It's a marathon, not a sprint.
+
+_Warren Buffett: "The stock market is a device for transferring money from the impatient to the patient."_
+
+Mistake 5: Staying home; It's a big world out there - so hwo come most investors stay so close to home.
+The solution: Expand your horizons.
+
+People also tend to stick with whatever they know best, preferring to trust what's most familiar. This is known as "home bias". It's a psychological bias that leads people to invest disproportionately in their own country's markets - and sometimes to invest too heavily in their employer's stock and their own industry.
+
+Mistake 6: Negativity and loss aversion; Your brain wants you to be fearful in times of turmoil - Don't listen to it.
+The solution: Preparation is key.
+
+Invest for the long term; to trade less; to lower your investment fees and transaction costs; to be more open to views that differ from your own; to reduce risk by diversifying globally; and to control the fears that could otherwise derail you during bear markets.
