Adds reading notes.

--- a/note/...book_unshakeable.md
+++ b/note/...book_unshakeable.md
@@ -6,6 +6,7 @@
 the purpose of business is to produce happiness, not to pile up money.
     -- B.C.Forbes
 
+
 ## SECTION I - WEALTH: THE RULE BOOK
 ### CH 1 - UNSHAKEABLE: Power and Peace of Mind in a World of Uncertainty
 ### CH 2 - WINTER IS COMING...BUT WHEN?: These Seven Facts Will Free You from the Fear of Corrections and Crashes
@@ -40,7 +41,8 @@ __4. Core 4: Diversification__
 ### CH 7 - SLAY THE BEAR: How to Navigate Crashes and Corrections to Accelerate Your Financial Freedom
 When it comes to the areas of your life that matter most - your family, your faith, your health, your finances - you can't rely on anybody else to tell you what to do. It's great to get coaching from experts in the field, but you can't outsource the final decision. You can't give another person control over your destiny, no matter how sincere or skilled he or she may be.
 
-_Warren Buffett: "Risk comes from not knowing what you're doing."_
+  > Warren Buffett: "Risk comes from not knowing what you're doing."
+
 
 ## SECTION III - THE PSYCHOLOGY OF WEALTH
 ## CH 8 - SILENCING THE ENEMY WITHIN: The Six Money Misakes Investors Make and How You Can Avoid Them
@@ -49,7 +51,7 @@ Neuroscientists have found that the parts of the brain that process financial lo
 Mistake 1: Seeking confirmation of your beliefs why the best investors welcome opinions that contradic their own.
 The Solution: Ask better question and find qualified people who disagree with you.
 
-_Munger: "Forget what you know about buying fair businesses at wonderful prices; instead, buy wonderful businesses at fair prices."_
+  > Munger: "Forget what you know about buying fair businesses at wonderful prices; instead, buy wonderful businesses at fair prices."
 
 Mistake 2: Mistaking recent events for ongoing trends why most investors buy the wrong thing at exactly the wrong moment.
 The Solution: Don't sell out. Rebalance.
@@ -60,7 +62,7 @@ The Solution: Get real, get honest
 Mistake 4: Greed, gambling, and the quest for home runs; It's tempting to swing for the fences, but vitory goes to the steady survivors.
 The Solution: It's a marathon, not a sprint.
 
-_Warren Buffett: "The stock market is a device for transferring money from the impatient to the patient."_
+  > Warren Buffett: "The stock market is a device for transferring money from the impatient to the patient."
 
 Mistake 5: Staying home; It's a big world out there - so hwo come most investors stay so close to home.
 The solution: Expand your horizons.
@@ -71,3 +73,17 @@ Mistake 6: Negativity and loss aversion; Your brain wants you to be fearful in t
 The solution: Preparation is key.
 
 Invest for the long term; to trade less; to lower your investment fees and transaction costs; to be more open to views that differ from your own; to reduce risk by diversifying globally; and to control the fears that could otherwise derail you during bear markets.
+
+
+### CH 9 - REAL WEALTH: Making the Most Important Decision of Your life
+Real wealth is emotional, psychological, and spiritual.
+
+  > Winston Churchill: "You make a living by what you get. You make a life by what you give."
+
+Money doesn't change people. It just magnifies who they already are.
+A man is but the product of his thoughts. What he thinks, he becomes.
+A undirected mind operates naturally in survival mode, constantly identifying and magnifying these potential threats to our well-being. The result: a life filled with stress and anxiety.
+
+I'm done with suffering. I'm going to live every day to the fullest and find juice in every moment, including the ones I don't like, because life is just too short to suffer.
+
+Living in a beautiful state is the greatest prize, the real jackpot, the ultimate treasure. This is rarer - and a much greater achievement - than being a millionaire or billionaire.
