Adds reading notes.

--- a/note/...column_世界名刊速读.md
+++ b/note/...column_世界名刊速读.md
@@ -5,6 +5,10 @@
 --------------------------------------------------------------------------------
 
 
+## 2018-03-27 《新科学家》| 面对权威，你会服从到什么程度？
+曾经有一位在中国长期支教的德国人，叫卢安克，他说过这样一句话，他说：“文明，就是停下来，想一想。”
+
+
 ## 2018-02-27 《哈佛商业评论》| 麻省理工商学院的头脑风暴法
 当你还是个学生时，人们考察你的是回答问题的能力，回答得的好，分数就高。但真实生活中，提问的能力才是关键。
 When you’re a student, you’re judged by how well you answer questions. But in life, you’re judged by how good your questions are.
