--- a/note/...column_吴军的谷歌方法论.md
+++ b/note/...column_吴军的谷歌方法论.md
@@ -4,6 +4,28 @@
 --------------------------------------------------------------------------------
 
 
+## 2018-03-22 以正合，以奇胜——乐观主义者的做事方法
+作战，先要把正面的兵排好，要排得不偏斜，合乎法则，这叫做正。如果这时你还有多余的兵力，你就赢了。以后很多人把这句话理解为出奇制胜，那是以今天汉语的字意理解当时的语言。
+历史上真正出奇制胜的战役很少，那些写进历史教科书的会战，常常是因为一方善于调动兵力，自己还能掌握多余的机动兵力，最后获胜。拿破仑在他最辉煌的奥斯特里茨战役中，就是靠巧妙地调动兵力，当双方都处于胶着状态时，他手下还有贝尔纳多特的一支完整的军队
+
+在无限长的时间里，变是常态，不变是非常态。但是在有限的时间里不变和渐变是常态，巨变是非常态。
+
+
+## 2018-03-08 计算机科学与计算机工程的区别
+科学常常指出正确的方向，而工程则是沿着科学指出的方向建设道路。如果没有计算机科学给出最好的算法，我们修的道路通常缺乏方向性，是在绕路，但是，有了科学后，最终还需要工程把道理修通。
+
+
+## 2018-03-06 从计算机的算法，谈谈提高效率的本质
+效率＝产出／所做的事情。人的产出是很难提高的，但是所做的事情是可以减少的。
+
+
+## 2018-03-01 投资大师比尔∙米勒的成功秘诀
+米勒的投资秘诀，可以总结为三点：
+1. 投资其实是寻找具有所谓“最大价值”的公司。这些公司是可以创造未来的。
+2. 什么东西贵还是不贵，不能看价格，而要看它们值不值那个钱，如果没有最大价值，即使看似便宜，也不要捡。
+3. 所谓分散风险，其实就是要让自己的投资具有互补性。 具体到米勒的基金，它不仅仅强调在不同公司之间，甚至不同行业之间保持多样性，还按照不同的衡量标准保持多样性，因为衡量标准本身也不是一件确定的事情。
+
+
 ## 2018-02-28 股神彼得·林奇成功的秘密武器
 任何为大众所知的信息，在投资上都是没有价值的。
 
