--- a/note/...column_精英日课_第二季.md
+++ b/note/...column_精英日课_第二季.md
@@ -4,6 +4,23 @@
 --------------------------------------------------------------------------------
 
 
+## 2018-03-21 利益攸关》2：雇员和冒险家
+自由，意味着独自面对风险。风险，决定了你的气质。
+
+塔勒布从风险管理的角度对“雇员”这个身份做了一番分析。雇员在公司有利益攸关，所以有忠诚度。公司替雇员遮挡了风险，雇员获得稳定，代价是不自由。想要自由，你就得独自面对风险。所以说“Freedom is Not Free”，自由不是白给的。
+
+
+## 2018-03-19 《利益攸关》1：现代社会和利益攸关
+塔勒布的道理就是，如果你没有利益攸关，你不要给别人提建议。你要向谁推荐哪个股票，首先你自己得买这个股票。当然这里面可能有利益冲突，你买了希望我们也买，一起抬高股价。塔勒布认为这是可以的，只要有利益攸关就一定有利益冲突，这我认了，至少你是真诚的。如果都像记者一样人云亦云，听说哪个好就转发一下，会给社会造成系统偏见，危害更大。
+
+所谓灵魂攸关，是本来这个游戏里没有你的利益，但是你把它当成自己的利益。
+比如说工匠精神。很多工匠完成一个作品并不仅仅是为了挣钱，他觉得只要是我的作品，就必须得是个好东西。有工匠精神的人认为投机取巧是可耻的，他们比不卖假货、认真负责更高级。
+
+
+## 2018-03-07 一个驯化的故事
+第一个道理是客观环境是最硬的东西。环境变了，游戏规则就会跟着变。游戏规则变了，人就会跟着变。也就是说，想要大规模地改变人，必须指望环境先变了才行。一个人想改变一群人太难了，深刻的变革是从环境开始的。
+
+
 ## 2018-02-12 线性思维和系统思维
 所谓系统，就是一个由很多部分组成的整体，各个部分互相之间有联系，作为整体又有一个共同的目的。人的身体、学校、公司、国家，都是系统。系统有三个特征。
 
