Adds reading notes for columns.

--- a/note/...column_技术领导力300讲.md
+++ b/note/...column_技术领导力300讲.md
@@ -17,3 +17,7 @@
 ## 第2讲 | 七位CTO纵论技术领导者核心能力
 AdMaster 联合创始人兼 CTO 洪倍  
 CTO 就是这样一个需要会带人、能攻坚、有视野、愿试错、懂得顺势而为的岗位。
+
+
+## 第4讲 | 技术领导者不等于技术管理者
+管理很多时候是在解决重复问题，有章可循，而领导经常要面对新问题、新形势，而且没有现成的规章可以遵循。
