--- a/note/...column_精英日课_第二季.md
+++ b/note/...column_精英日课_第二季.md
@@ -4,6 +4,88 @@
 --------------------------------------------------------------------------------
 
 
+## 2018-04-30 《超越曲棍球杆的战略》3:命运配方
+我们把10个公司指标“翻译”成个人指标，大约是这样的 ——
+
+资质三项：
+1. 规模，就是你现在的收入水平；
+2. 负债率，就是你的家庭负担之类的各种负担，你能不能腾出手来做别的；
+3. 投资额，就是你曾经花了多少时间在学习上。
+
+趋势两项：
+1. 行业，就是你的职业有没有前途；
+2. 地点，就是你住在哪个城市。
+
+动作五项：
+1. 并购，就是你计划中要跟多少新人发生合作连接；
+2. 动态资源分配，就是你要不要换个方向发展；
+3. 资本花费，就是你愿意花多少时间和金钱去提升自己；
+4. 提高生产率，就是你的时间管理能不能更有效率；
+5. 产品创新，就是你的工作能不能得到外界的肯定。
+
+
+## 2018-04-26 创业不是科学
+当一个人说要创业的时候，他可能有三种理由。而其中只有一个理由是对的。
+第一个理由是“我想创业”。有的人创业主要是因为他不喜欢当雇员，他想自己说了算。他认为创业是个很美好、甚至很光荣的事儿。
+第二个理由是“我懂创业”。有的人特别了解商业，他觉得我这么懂商业的人不创办一个公司就是浪费了人才。
+第三个理由是“我有一个东西要卖”。只有这个理由才是对的。
+
+
+## 2018-04-23 《超越曲棍球杆的战略》1:什么是战略思维
+为什么战略这么难呢？因为你没法刻意练习。
+刻意练习需要大量的重复训练、需要获得及时的反馈、需要在一个个的小失败中成长。可是一般人做战略决策的机会很少，一个决策对不对常常过好几年才知道，决策都很重要、一失败就是大失败。
+很多人一生之中的重大决策，一大半都是在三十岁以前。报考哪个学校、学哪个专业、到哪个公司工作、跟谁结婚。做这些决策的时候你没经验。等你吃了几次亏有经验了，你可能决策的机会已经不多了。
+
+
+## 2018-04-19 科学家的核心价值观
+现代人如此崇拜科学，很大程度上是从第一颗原子弹爆炸开始的 —— 人们是见识了科学的力量才崇拜科学，人们真正崇拜的其实是科学的力量。
+
+蒙洛迪诺提醒我们科学家的初心是什么。我觉得这个初心可以总结成下面这三个“核心价值观”：
+
+  1. 你的目的是想知道这个世界到底是怎么回事儿。
+  2. 你的理论要能用数学精确表述。
+  3. 对错与否取决于对自然的观测和实验。
+
+
+## 2018-04-16 《规模》4:为什么城市越大越好
+意味着大城市比小城市更节省基础设施！而更好的消息是，城市的产出和规模是个超线性关系。
+
+
+## 2018-04-11 《规模》3:寿命的定数
+衰老的根本原因是细胞受到损伤。损伤有各种情况，这里我们特别强调一点，就是在终端毛细血管和细胞之间的磨损。
+血液供给到细胞的过程中有一个粘滞阻力，会对毛细血管产生物理上的磨损。只要血液在流动，就有这个磨损 — 就好像轮胎一样，只要你开车就有磨损。
+可惜人体不是汽车。汽车轮胎磨损厉害了可以换轮胎，最起码方向盘还是好的。而对人体来说，因为毛细血管遍布到全身每个角落，损伤是发生在全身的每一个地方。不是一个零件坏了，是身体所有零件都磨损了，是各项机能全面下降。
+
+所有动物一生的总心跳是一个固定的数字。事实上除了人之外，所有哺乳动物一生的心跳总数都是15亿次 —— 而人是25亿次。
+
+毛细血管遍布全身，就好像是你把一个床单反复折叠、压到很结实之后，它就已经不是二维的床单，得按体积算账。血管的表面积已经是三维的，血管已经成了四维。
+这是大自然的鬼斧神工！把人的血管摊开，总长度能达到10万公里，相当于绕地球2.5圈。
+
+
+## 2018-04-10 《规模》2:身体里的分形
+分形结构，就是你把这个东西的局部放大，发现它和它的整体很相似，再找个局部再放大，又跟刚才很相似，可以这么一直下去，也就是“自相似”。
+
+
+## 2018-04-09 《规模》1:物理学祖师爷的洞见
+以前的人造船只是胡乱摸索，一直到一个英国工程师叫布鲁内尔（Brunel），考虑了尺度分析，才意识到应该尽可能地造大船。
+布鲁内尔是这么想的。船的载货能力是体积决定的，跟船的尺寸的立方成正比。但是船在水面上受到水的拖曳力，则是跟船底的面积成正比。这也就是说，船要克服的航行阻力，是跟船的载重量的2/3次方成正比 —— 如果你能把载重量扩大到10倍，你需要的动力只要是原来的4.6倍就可以了。
+船越大，每一吨载重量需要的动力就越低。这是最基本的规模经济！这就是为什么现在货轮和油轮都是尽可能地往大了造，越大越好。简单的尺度分析，就能告诉你这个道理。
+
+如果你家有小孩，你会注意到小孩吃的药，说明书上给的剂量，都是由体重来决定的。如果你仔细看，你会发现建议的剂量往往是跟体重成正比。
+韦斯特不是医生，但是韦斯特告诉我们，所有这些煞有其事的剂量指导，都是错的。药物剂量根本就不应该跟体重成正比。
+韦斯特是这么考虑的。药物剂量应该由新陈代谢决定，而如果你考虑到生物体的能量网络传播，新陈代谢是跟生物的面积而不是体积成正比。也就是说，药物剂量应该跟体重的2/3次方成正比。
+
+
+## 2018-04-08 如何判断“尾部风险”是不是“黑天鹅”？
+宗教，是能给人提供一揽子综合的世界观和解决方案的东西。比如说基督教，对世界是怎么起源的、人类是怎么来的、我们人生在世应该做些什么、我们的未来会怎样，都给出了完整的解释和说明，这才是宗教。你接受宗教，就是接受这一整套解释和说明。一个真正的教徒是没有什么困惑的，他任何时候都知道世界是怎么回事儿、自己该干什么。
+
+那科学是宗教吗？不是。正如罗胖以前有一期节目说的，宗教的特点是“全知道”，而科学的特点恰恰是勇于承认“不知道”。
+
+“尾部风险”这个词，塔勒布本人也不喜欢。人们用这个词代表那些发生在分布曲线尾端（代表风险很小）的风险，塔勒布这里的语境则特别要求尾部风险一定是危害大到足以毁灭的程度（比如账户清零、或者失去生命）的风险。
+
+人总是要死的，我们不可能避免所有的尾部风险。我理解正确的应该是不做那些明明没有太大的好处，却包含一个潜在尾部风险的事情。
+
+
 ## 2018-03-21 利益攸关》2：雇员和冒险家
 自由，意味着独自面对风险。风险，决定了你的气质。
 
