Adds reading notes.

--- a/note/...column_5分钟商学院_实战.md
+++ b/note/...column_5分钟商学院_实战.md
@@ -5,6 +5,19 @@
 --------------------------------------------------------------------------------
 
 
+## 2018-05-24 资本杠杆：“走开走开，放着我来”式的贝恩模式，为什么能成功？
+如果你真的对你的能力内核有巨大信心，觉得它是坚实可复制的，那你可以选择创业。创业的本质，就是“收购你自己”，然后借助资本的力量，复制放大你的能力。
+
+
+## 2018-05-21 杠杆理论：成功不可复制，成功的原因却可以
+第一， 好产品不是支点，做好产品的流程才是。
+第二， 好员工不是支点，产生好员工的制度才是。
+第三， 好用户不是支点，获得好用户的方法才是。
+
+
+## 2018-05-17 网络效应：为什么阿里干不掉微信，而腾讯也干不掉淘宝？
+你的人生，有护城河吗？刚毕业，我们的护城河，可能是借助自己的“成本优势”，然后可能是经验积累带来的“转换成本”；再然后也许是信用和影响力带来的“无形资产”；最后多半是庞大的人脉资源带来的“网络效应”。现在你的人生，有几条护城河呢？
+
 
 ## 2018-02-28 定义产品：为什么褪黑素在中国，能比在美国贵56倍？
 同样一只“青瓷莲花罐”，被定义为茶叶罐时，只卖29元；但被定义为“宠物骨灰盒”，就能成为卖258元还不打折的“爱的容器”。
