--- a/note/...column_精英日课_第二季.md
+++ b/note/...column_精英日课_第二季.md
@@ -4,6 +4,78 @@
 --------------------------------------------------------------------------------
 
 
+## 2018-05-31 一个对收入差距增大的物理学解释
+所谓财富，就是东西的流动。 那么如何创造更具流动性的东西？
+
+
+## 2018-05-25 你在潮流的位置
+"信息过载" 是个不需要解决的伪问题，只是人的认知初级阶段的表面症状而已。到底是过载、喜欢还是饥渴，取决于你遭遇了多少意外。这条路一共有四个阶段：信息过载、发现联系、把握潮流、等待惊喜。
+
+
+## 2018-05-16 决策理性批判
+所谓做决策，简单地说，就是看看自己都有什么选项，然后从中选择最好的一个。这个动作也是战略的本质，战略就是要决定“做什么”，剩下的“怎么做”都是细节问题。
+这大概就有点像张爱玲的《红玫瑰与白玫瑰》 ——
+娶了红玫瑰，久而久之，红的变了墙上的一抹蚊子血，白的还是床前明月光；娶了白玫瑰，白的便是衣服上沾的一粒饭黏子，红的却是心口上一颗朱砂痣。
+所以有一句话说得特别好：如果你没有某个东西，你千万不要抱着酸葡萄心理说它不好 —— 因为你根本不知道拥有这个东西会是什么样的感觉。有些人爱说我视功名钱财如粪土 —— 你最好有了功名钱财再这么说。
+
+这里面没有理性选择。当你做选择的时候，是现在的你在为未来的你做选择。也可以说，你是在选择变成谁。
+“理想的自己”，就是你*想要*成为什么人 —— 比如说你想当一个体育明星，或者你想当一个艺术家，是你的梦想。“义务的自己”，就是你*应该*干什么 —— 比如你应该好好赡养父母、好好照顾孩子，你应该为社会做贡献，你应该兢兢业业地完成任务等等。
+这项研究发现，70%以上的人，都后悔没有成为理想的自己；只有20%多的人后悔没有成为义务的自己。
+
+所谓做决策，简单地说，就是看看自己都有什么选项，然后从中选择最好的一个。这个动作也是战略的本质，战略就是要决定“做什么”，剩下的“怎么做”都是细节问题。
+有一个决策标准，是把人生的“后悔”给最小化。
+考察那些到了人生终点、濒临死亡的人，当他们躺在病床上回忆一生的时候，最后悔的东西是什么？以前就有研究说，他们最后悔的是他们*没做*什么，而不后悔自己*做过*什么。
+
+
+## 2018-05-15 《园丁与木匠》6:青春的较量
+青春期少年其实也是在探索，但是他们这种探索和以前的探索不一样。以前都是在家长的庇护之下探索，做一些游戏性的操作。青春期少年的探索则是直接面对真实世界，他要追求独立。他打交道的对象都是同龄人，这是给即将到来的成人社交做演练。
+那么我们也可以用另一个视角，把青春期少年的心理分成两个系统 —— 一个是“动力系统”，一个是“控制系统”。用汽车打比方，动力系统就好像是油门，控制系统就好像是方向盘和刹车。
+动力系统的作用是通过调动感情，让人充满各种做事的动机。青春期少年迫切希望实现自己的各个目标、满足各种渴望，体验各种感觉。
+能力越大责任也越大，自由度越大控制力就得越大。最理想的情况下，随着青春期少年慢慢长大，他要求的自由越来越多，同时他的控制能力也越来越强，两个系统一起成长。他既有强烈的进取心，又能够调整方向控制自己……就这样变成大人。
+
+
+## 2018-05-11 《园丁与木匠》4:因为孩子爱玩
+所谓教学，其实是一把双刃剑。孩子非常敏感，如果你是在教他，他就不探索了，他就模仿你。
+总结来说，关于玩，家长能为孩子做的事大概有三点 ——
+第一，提供一个安全稳定的环境。孩子在贫穷或者危险的环境都能玩，如果有一个安全稳定的环境，让孩子能放开了玩，他们会更加积极地探索。
+第二，提供玩具。玩具不一定非得多么高端复杂，一根小木棍也可以玩，关键是得有玩具可玩。
+第三，如果家长想参与，想引导孩子一起玩，也行 —— 但是你别忘了先戴上一顶侦探帽：你得能融入孩子的主流文化才行。
+
+
+## 2018-05-10 《园丁与木匠》3:当孩子玩的时候孩子在学什么
+类比到人生的选择，像有些运动员和表演艺术家从小苦练，把一生押注在一门手艺上，就是刺猬；而有的人灵活性特别强，就相当于狐狸。
+那你说就算要培养狐狸，我多报几个兴趣班，效率不是更高吗？不行。玩跟上课最大的区别在于它是一种主动的探索，是亲自面对真正的意外。吹拉弹唱才艺学习，这些都是按照老师要求做事，这不是玩。我们关心的不是学会了多少技能，而是将来能不能应对新的环境。玩，是让孩子摸爬滚打一身伤痕换一份体会。
+想象不存在的东西，这是创造力的起源 —— 按赫拉利的说法这可是智人的超能力！永远都是想法先行，敢想才能敢干。
+“心智理论（Theory of Mind）”，就是说你要知道别人的情绪是什么样，他有什么意图，他有什么欲望，他是真的还是假装，他的信仰是什么……你得会判断人的心理状态。
+孩子的玩法比大人高级，一共有三种 ——
+1. 跟同伴打闹，这能让孩子学会社交互动；
+2. 玩玩具，这能让孩子探索东西都是怎么工作的。
+3. 假装，能够激发创造性，想象不同的可能性，而更重要的则是，掌握人生最重要的技能，也就是心智理论。
+
+
+## 2018-05-08 《园丁与木匠》2:真关系和假教育
+以我之见，中式育儿的一个错误，是用训练大孩子的方法教小孩子。可能在某些家长心目中，所谓幼教就是让孩子在五岁的时候掌握教学大纲中七岁应该掌握的技能。
+现代人教育小孩最常用的办法还是对话。对话，也是少数几个能真正影响孩子一生的、家长的干预方法。你可能已经知道，美国中产阶级的家长因为跟孩子说话多，孩子词汇量会比贫困家庭的孩子多很多，而这是一个重要差别。孩子为什么总爱问问题？以前有的育儿专家说可能他是想吸引你的注意力 —— 而科学家的说法是小孩问问题是因为他想对这个世界有更深更广的了解。
+我们希望能传达给孩子一些知识，但是孩子非常挑人 —— 不是什么人跟他说什么东西他都信。
+
+
+## 2018-05-07 《园丁与木匠》1:童年是一种风险解决方案
+因为未来环境不可预测，孩子将来幸福不幸福、成功不成功就不是你所能决定的 —— 得看他的特性跟他将来遇到的环境是否匹配。我们专栏第一季讲过“兰花和蒲公英”的概念，有的孩子像兰花特别挑环境，有的孩子像蒲公英走哪都能活。
+孩子的运气是孩子自己的事情，家长所能做的就是提供多方探索、体验不同环境的条件。我们爱孩子是无条件的，不论他是蒲公英还是兰花，安静还是外向，爱冒险还是胆小，我们都尽量提供探索资源。
+家长对孩子是一种关系，而不是一种工作。漫长的未成年期是人类的竞争优势，人类面对复杂多变的环境采取了先探索后收获的策略。童年时代的主要作用是探索和学习。童年，是一种风险解决方案。
+
+
+## 2018-05-04 重新认识“战略思维”
+1.所谓战略，就是你决定做*什么*。战略是选择一个方向。战术就要低一级了，战术是方向已经确定了的情况下，你琢磨*怎么*做。攻略更低，是照着别人的经验把这事做下来。底层学习攻略，中层研究战术，高层选择战略。
+6.收获从来都不是由付出决定的。做什么，比怎么做，比做得努力不努力，重要得多。
+14.所谓战略，就是选择方向，集中力量，做几件能让你在利益分配曲线上有一个更好的位置的，大事。
+如果你心里有一个非常明确的长期战略，你看问题的眼光就不一样了。从战略视角去看，你会获得见微知著的能力。
+
+
+## 2018-05-22 《超越曲棍球杆的战略》5:到底什么叫“集中力量办大事”
+人的确应该全面发展，但学校正规教育已经安排了全面发展，课外活动得致力于优先发展。
+
+
 ## 2018-04-30 《超越曲棍球杆的战略》3:命运配方
 我们把10个公司指标“翻译”成个人指标，大约是这样的 ——
 
