--- a/note/...2018_handy_notes.md
+++ b/note/...2018_handy_notes.md
@@ -5,6 +5,10 @@ date      : 2018-01-01
 
 
 ## 散记
+“自己”这个东西是看不见的，撞上一些别的什么，反弹回来，才会了解“自己”。
+所以，跟很强的东西、可怕的东西、水准很高的东西相碰撞，然后才知道“自己”是什么，这才是自我。
+    -- 山本耀司（日本设计大师）
+
 What separates a master from a cubicle worker (both of whom perform actions over long periods of time) is that the cubicle workers does the action and seeks completion while the master does action with the intention of discovery.
     -- Nicolas Cole
 
