Archives 2017 handy notes and adds a story.

--- a/note/...2018_handy_story.md
+++ b/note/...2018_handy_story.md
@@ -1,6 +1,25 @@
 ---
+title     : 2018 handy stories（随手记：故事）
 date      : 2016-04-08
 ---
+
+
+## 大脑为什么不怕过载
+来源：https://www.livescience.com/57740-sleeping-shrinks-brain-synapses.html 生命科学网
+
+2017年2月，著名的《科学》期刊发表了一个研究成果，说我们睡觉的时候，大脑里的神经连接会削弱。这个变化机制确保了大脑不会信息过载。
+
+先来说说，大脑里的神经连接是怎么削弱的呢？这要涉及到一个名词，叫突触，突然的突，接触的触，也就是大脑的神经元之间接触的结构。每个神经元会和别的神经元形成大约1000个突触。大脑不断输入新的信息，突触就会变强大，体积也会变大。但是突触不能无限加强，要不然就会饱和，甚至烧毁，这就是“信息过载”。在睡眠过程中，突触会被修剪。美国威斯康星大学麦迪逊分校的两位研究者发现，睡觉的时候，大脑里的突触会缩小将近20%。
+
+突触为什么要缩小呢？这不是意味着大脑里的神经连接被削弱了吗？科学家说，为了保持大脑学习新事物的能力，就必须要睡觉。因为当清醒的时候，我们总会被身边各种事物吸引，它们不断刺激我们的神经，迫使我们学习。但是在睡觉的过程中，大脑受外部环境的影响较小，突触会充分休息，为接受新的信息输入、学习新事物做准备。要是突触不休息，将会因为超负荷工作而崩溃，就像插线板接入过多的电器后会烧坏一样。
+
+那是不是所有的突触在睡眠期间都会被修剪呢？
+
+美国一家科学新闻网站生命科学网发表文章综述说，在之前的研究中，研究者观察发现，大概只有80%的突触会在睡眠中被“修剪”。而剩下的那20%的突触，面积普遍都比较大，它们在睡眠期间不会被“修剪”。研究者认为，这些比较大的突触可能跟稳定或者重要的记忆有关。也就是说，大脑不希望忘掉它们，所以不会修剪那部分的突触。不过，研究者也说，大脑究竟是通过什么机制决定哪些突触需要被修剪，哪些又不能被修剪，这仍然是个谜。
+
+再来说说，修剪突触一定要在睡眠期间完成吗？
+
+研究者说，修剪突触不一定非要身体处在睡眠状态中。不过，睡觉的时候，大脑信息流量减少，这对于身体来说是一个优势。在小鼠身上做实验的时候，研究者发现，只需要几个小时的睡眠，大脑突触就能缩小将近20%。
 
 
 ## 费马最后定理
